[package]
name = "crt-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "crt-backend"
path = "src/main.rs"

[dependencies]
crt-core = { path = "../crt-core" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
