[package]
name = "crt-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pest = "2.7"
pest_derive = "2.7"
anyhow = "1.0"

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dependencies.serde-wasm-bindgen]
version = "0.6"
optional = true

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "wasm-bindgen-futures", "serde-wasm-bindgen", "console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true
